# swarmness-vst3

./: .abacus.donotdelete  .gitignore  CHANGE_PLAN.md  CMakeLists.txt  CREATE_REPO_NOW.txt  QUICK_START.md  README.md  SETUP_SUMMARY.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AnalogFilterEngine.h  ChorusEngine.cpp  ChorusEngine.h  DCBlocker.cpp  DCBlocker.h  FlowEngine.cpp  FlowEngine.h  GranularPitchShifter.cpp  GranularPitchShifter.h  Modulation.cpp  Modulation.h  ModulationGenerator.h  PitchRandomizer.cpp  PitchRandomizer.h  PitchSlideEngine.cpp  PitchSlideEngine.h  Saturation.cpp  Saturation.h
Source/GUI/: FootswitchButton.cpp  FootswitchButton.h  InfoPanel.h  MetalLookAndFeel.cpp  MetalLookAndFeel.h  PowerButton.h  PresetPanel.cpp  PresetPanel.h  RotaryKnob.cpp  RotaryKnob.h
Source/Preset/: PresetManager.cpp  PresetManager.h
